# Reflecta

./: .gitignore  CMakeLists.txt  README.md
include/: box_objects.h  meta_descriptor.h  object.h
src/: box_objects.cpp  meta_descriptor.cpp  object.cpp
tests/: doctest.h  main.cpp  tests.cpp
